--- a/public/style.css
+++ b/public/style.css
@@ -275,7 +275,7 @@
  @media(max-width:1279px){
   .bg_banner_skew:before{
    
-    width: 135%;
+    width: 134%;
     transform: rotateY(27deg);
     
    }
@@ -332,7 +332,7 @@
  }
  @media(min-width:360px){
   .bg_cus_service_skew {
-    perspective: 2000px;
+    perspective: 125rem;
  }
 }
 .doctor_cus_service_img {
@@ -340,7 +340,7 @@
   
 }
 .shadow_cus_shape_service{
-  box-shadow: 0px 8px 16px 0px #0A99494D;
+  box-shadow: 0rem 0.5rem 1rem 0rem #0A99494D;
 
 }
 @media(max-width:1919px){
@@ -470,6 +470,12 @@
 .swiper.swiper_img_customer.swiper_img_customer_container{
   height:46.875rem!important;
 }
+.swiper-wrapper.swiper-wrapper_img_customer{
+  height:44.25rem!important;
+}
+.slide-img-cus_grid{
+  width:100%;
+}
 @media(max-width:1023px){
   .swiper-pagination{
     flex-direction:row;
@@ -479,12 +485,32 @@
 
 }
 @media(max-width:639px){
-  .swiper.swiper_img_customer.swiper_img_customer_container{
-    height:134.375rem!important;
+  .slide-img-cus_grid{
+    width:90%;
   }
 
 }
+@media(max-width:639px){
+  .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 0.094rem)!important;
+}
+  :root {
+    --swiper-pagination-bullet-width: 1rem;
+    --swiper-pagination-bullet-active-width: 2rem!important;
+  }
+  .swiper-pagination-bullet {
+    width: 1rem; 
+    height: 0.438rem;
+  }
+  .swiper-pagination-bullet-active   {
+   
+    width: 2rem!important;
+    width: var(--swiper-pagination-bullet-active-width) !important;
+   
+  
+  }
 
+}
 .trapezium_shape_img{
   clip-path: polygon(0 85%, 0 0%, 100% 0, 100% 94%);
   left: 14.813rem;
@@ -756,7 +782,7 @@
 /////css swiper table price
 
 .swiper-slide.swiper-slide-table_price{
-  box-shadow: 0px 16px 48px 0px #00000014!important;
+  box-shadow: 0px 1rem 3rem 0rem #00000014!important;
 
 }
 .swiper.swiper_table_service.swiper_table_service_container{
@@ -767,7 +793,8 @@
 
 }
 .swiper-slide.swiper-slide-table_price img{
-  box-shadow: 0px 16px 48px 0px #00000014!important;
+  box-shadow: 0px 1rem 3rem 0rem #00000014!important;
+
  
   border-radius:1.25rem!important;
   
@@ -804,6 +831,12 @@
     height:50rem;
    
    }
+}
+@media (max-width: 767px) {
+  .swiper.swiper_table_service.swiper_table_service_container {
+      width: 39rem !important;
+      height: 55.938rem !important;
+  }
 }
 @media(max-width:639px){
  
@@ -850,21 +883,23 @@
 }
 @media(max-width:1023px){
   .offers_customer_container{
-    width:70%;
-  }
-}
-@media(max-width:767px){
-  .offers_customer_container{
-    width:70%;
-  }
-}
-@media(max-width:639px){
-  .offers_customer_container{
     width:100%;
     padding:0 0.938rem;
   }
   .swiper.swiper_offers_cus_container.swiper_offers_cus{
+    width:70%
+  }
+}
+@media(max-width:767px){
+  .swiper.swiper_offers_cus_container.swiper_offers_cus{
+    width:70%
+  }
+}
+@media(max-width:639px){
+  
+  .swiper.swiper_offers_cus_container.swiper_offers_cus{
     height:33rem!important;
+    width:100%
   }
 }
 .icon_cus_offers img{
@@ -877,7 +912,7 @@
 }
 .swiper-slide.swiper-slide_offers_cus.swiper-slide-active{
   background: linear-gradient(90deg, #16A085 0%, #F4D03F 100%)!important;
-  box-shadow: 0px 7.71px 38.55px 0px #0A99494D!important;
+  box-shadow: 0 0.482rem 2.409rem 0prem #0A99494D!important;
   .text-offers_cus{
     color:#FFFFFF;
   }
@@ -898,15 +933,18 @@
      
     }
   }
+  .button_cus_offers:hover {
+    opacity:0.8!important;
+  }
 }
 .swiper-button-next.swiper-offers-cus-next {
-  width: 2.25rem;
-  height:2.25rem;
+  width: 1.688rem;
+  height:1.688rem;
   right: var(--swiper-navigation-sides-offset, 0px)!important;
 }
 .swiper-button-prev.swiper-offers-cus-prev{
-  width: 2.25rem;
-  height:2.25rem;
+  width: 1.688rem;
+  height:1.688rem;
   left: var(--swiper-navigation-sides-offset, 0px)!important;
 }
 .swiper-button-prev.swiper-offers-cus-prev svg:hover{
@@ -946,7 +984,7 @@
 
 }
 .shadow_table_register{
-  box-shadow: 8px 12px 64px 0px #0000000F;
+  box-shadow: 0.5rem 0.75rem 4rem 0rem #0000000F;
 
 }
 .table_register{
