--- a/public/output.css
+++ b/public/output.css
@@ -847,6 +847,10 @@ video {
   margin-bottom: 0px;
 }
 
+.mb-\[0\.55rem\] {
+  margin-bottom: 0.55rem;
+}
+
 .mb-\[0\.5rem\] {
   margin-bottom: 0.5rem;
 }
@@ -871,6 +875,10 @@ video {
   margin-bottom: 2rem;
 }
 
+.mb-\[4rem\] {
+  margin-bottom: 4rem;
+}
+
 .mb-\[5\.5rem\] {
   margin-bottom: 5.5rem;
 }
@@ -881,6 +889,18 @@ video {
 
 .mr-0 {
   margin-right: 0px;
+}
+
+.mr-\[0\.25rem\] {
+  margin-right: 0.25rem;
+}
+
+.mr-\[0\.75rem\] {
+  margin-right: 0.75rem;
+}
+
+.mr-\[1\.5rem\] {
+  margin-right: 1.5rem;
 }
 
 .mt-0 {
@@ -925,6 +945,18 @@ video {
 
 .mt-\[7\.25rem\] {
   margin-top: 7.25rem;
+}
+
+.mb-\[13\.5rem\] {
+  margin-bottom: 13.5rem;
+}
+
+.ml-\[0\.482rem\] {
+  margin-left: 0.482rem;
+}
+
+.mb-\[0\.25rem\] {
+  margin-bottom: 0.25rem;
 }
 
 .block {
@@ -1336,20 +1368,12 @@ video {
   justify-content: space-evenly;
 }
 
-.gap-0 {
-  gap: 0px;
-}
-
 .gap-\[0\.25rem\] {
   gap: 0.25rem;
 }
 
 .gap-\[0\.482rem\] {
   gap: 0.482rem;
-}
-
-.gap-\[0\.55rem\] {
-  gap: 0.55rem;
 }
 
 .gap-\[0\.5rem\] {
@@ -1378,10 +1402,6 @@ video {
 
 .gap-\[2rem\] {
   gap: 2rem;
-}
-
-.gap-\[4rem\] {
-  gap: 4rem;
 }
 
 .space-x-\[0\.5rem\] > :not([hidden]) ~ :not([hidden]) {
@@ -1899,8 +1919,20 @@ video {
     margin-bottom: 1.5rem;
   }
 
+  .sm\:mb-\[1\.6rem\] {
+    margin-bottom: 1.6rem;
+  }
+
   .sm\:mb-\[2\.5rem\] {
     margin-bottom: 2.5rem;
+  }
+
+  .sm\:mb-\[3rem\] {
+    margin-bottom: 3rem;
+  }
+
+  .sm\:mb-\[5\.5rem\] {
+    margin-bottom: 5.5rem;
   }
 
   .sm\:ml-\[1rem\] {
@@ -1941,6 +1973,10 @@ video {
 
   .sm\:mt-\[68\.5rem\] {
     margin-top: 68.5rem;
+  }
+
+  .sm\:mb-\[1\.188rem\] {
+    margin-bottom: 1.188rem;
   }
 
   .sm\:flex {
@@ -2114,14 +2150,6 @@ video {
     gap: 1.188rem;
   }
 
-  .sm\:gap-\[1\.5rem\] {
-    gap: 1.5rem;
-  }
-
-  .sm\:gap-\[1\.6rem\] {
-    gap: 1.6rem;
-  }
-
   .sm\:gap-\[2rem\] {
     gap: 2rem;
   }
@@ -2134,8 +2162,8 @@ video {
     gap: 3rem;
   }
 
-  .sm\:gap-\[5\.5rem\] {
-    gap: 5.5rem;
+  .sm\:gap-\[1\.875rem\] {
+    gap: 1.875rem;
   }
 
   .sm\:space-x-\[0\.5rem\] > :not([hidden]) ~ :not([hidden]) {
@@ -2311,12 +2339,20 @@ video {
     top: 6%;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:mb-\[2\.5rem\] {
     margin-bottom: 2.5rem;
   }
 
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mr-0 {
+    margin-right: 0px;
   }
 
   .md\:flex {
@@ -2621,12 +2657,28 @@ video {
     margin-bottom: 2.5rem;
   }
 
+  .lg\:mb-\[7\.5rem\] {
+    margin-bottom: 7.5rem;
+  }
+
   .lg\:mt-\[4\.063rem\] {
     margin-top: 4.063rem;
   }
 
   .lg\:mt-\[5\.5rem\] {
     margin-top: 5.5rem;
+  }
+
+  .lg\:mb-\[0\.75rem\] {
+    margin-bottom: 0.75rem;
+  }
+
+  .lg\:mb-\[1rem\] {
+    margin-bottom: 1rem;
+  }
+
+  .lg\:mb-\[6rem\] {
+    margin-bottom: 6rem;
   }
 
   .lg\:flex {
@@ -2756,10 +2808,6 @@ video {
     gap: 6rem;
   }
 
-  .lg\:gap-\[7\.5rem\] {
-    gap: 7.5rem;
-  }
-
   .lg\:pt-0 {
     padding-top: 0px;
   }
@@ -2855,6 +2903,26 @@ video {
     margin-right: 6.25rem;
   }
 
+  .xl\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .xl\:ml-\[1\.25rem\] {
+    margin-left: 1.25rem;
+  }
+
+  .xl\:mr-\[0rem\] {
+    margin-right: 0rem;
+  }
+
+  .xl\:mr-\[1\.6rem\] {
+    margin-right: 1.6rem;
+  }
+
+  .xl\:mr-\[2\.25rem\] {
+    margin-right: 2.25rem;
+  }
+
   .xl\:mt-0 {
     margin-top: 0px;
   }
@@ -2947,18 +3015,6 @@ video {
 
   .xl\:justify-center {
     justify-content: center;
-  }
-
-  .xl\:gap-\[0rem\] {
-    gap: 0rem;
-  }
-
-  .xl\:gap-\[1\.25rem\] {
-    gap: 1.25rem;
-  }
-
-  .xl\:gap-\[2\.25rem\] {
-    gap: 2.25rem;
   }
 
   .xl\:overflow-y-scroll {
@@ -3060,8 +3116,28 @@ video {
     top: 2.438rem;
   }
 
+  .\32xl\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .\32xl\:ml-\[2rem\] {
+    margin-left: 2rem;
+  }
+
   .\32xl\:mr-\[-7\.063rem\] {
     margin-right: -7.063rem;
+  }
+
+  .\32xl\:mr-\[12\.5rem\] {
+    margin-right: 12.5rem;
+  }
+
+  .\32xl\:mr-\[2\.75rem\] {
+    margin-right: 2.75rem;
+  }
+
+  .\32xl\:mr-\[3\.5rem\] {
+    margin-right: 3.5rem;
   }
 
   .\32xl\:mt-0 {
@@ -3086,6 +3162,10 @@ video {
 
   .\32xl\:mt-\[9rem\] {
     margin-top: 9rem;
+  }
+
+  .\32xl\:mr-\[8\.188rem\] {
+    margin-right: 8.188rem;
   }
 
   .\32xl\:flex {
@@ -3170,18 +3250,6 @@ video {
 
   .\32xl\:gap-\[1\.5rem\] {
     gap: 1.5rem;
-  }
-
-  .\32xl\:gap-\[12\.5rem\] {
-    gap: 12.5rem;
-  }
-
-  .\32xl\:gap-\[2\.75rem\] {
-    gap: 2.75rem;
-  }
-
-  .\32xl\:gap-\[2rem\] {
-    gap: 2rem;
   }
 
   .\32xl\:gap-\[3\.5rem\] {
@@ -3279,6 +3347,14 @@ video {
     margin-right: 16rem;
   }
 
+  .\33xl\:mr-\[4\.875rem\] {
+    margin-right: 4.875rem;
+  }
+
+  .\33xl\:mr-\[6\.75rem\] {
+    margin-right: 6.75rem;
+  }
+
   .\33xl\:flex {
     display: flex;
   }
@@ -3303,14 +3379,6 @@ video {
 
   .\33xl\:gap-\[3\.5rem\] {
     gap: 3.5rem;
-  }
-
-  .\33xl\:gap-\[4\.875rem\] {
-    gap: 4.875rem;
-  }
-
-  .\33xl\:gap-\[6\.75rem\] {
-    gap: 6.75rem;
   }
 
   .\33xl\:px-0 {
